cmake_minimum_required(VERSION 3.30.3)
project(flower)
#set(SRC test.cpp)
aux_source_directory(./ Flower)
include_directories(${HEADPATH})
#set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/output)
#set(CMAKE_CXX_STANDARD 11)
link_libraries(${TOOLS})
link_directories(${LIBPATH})
set(LIBRARY_OUTPUT_PATH ${LIBPATH})
#add_executable(FlowerSys ${Flower})
add_library(${FlowerSys} STATIC ${Flower})
