cmake_minimum_required(VERSION 3.30.3)
project(main)
#set(SRC test.cpp)
aux_source_directory(./ Main)
include_directories(${HEADPATH})
include_directories(${SQLHEADPATH})
#set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/output)
#set(CMAKE_CXX_STANDARD 11)
link_libraries(${TOOLS} ${FlowerSys})
link_libraries(mysqlclient ${SQLLIBPATH})
link_libraries(mysqlservices ${SQLLIBPATH})
link_directories(${LIBPATH})
link_directories(${SQLLIBPATH})

set(EXECUTABLE_OUTPUT_PATH ${EXEPATH})
add_executable(${MAIN} ${Main})
target_link_libraries(${MAIN} mysqlclient)
#add_library(${FlowerSys} STATIC ${Flower})
