cmake_minimum_required(VERSION 3.30.3)
project(tools)
#set(SRC test.cpp)
aux_source_directory(./  Tools)
include_directories(${HEADPATH})
#set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/output)
#set(CMAKE_CXX_STANDARD 11)
#add_executable(FloweInfoSys ${Tools})
set(LIBRARY_OUTPUT_PATH ${LIBPATH})
add_library(${TOOLS} STATIC ${Tools})
#add_library(tools SHARED ${Tools})
